# genai-playground

./: README.md  pyproject.toml
genai_playground/: __init__.py  helper_utility.py  langchain_utils.py  main.py  similarity_database.py
tests/: test_helper_utility.py  test_langchain.py  test_similarity_db.py
