[tool.poetry]
name = "genai-playground"
version = "0.1.0"
description = "A playground for experimenting with LangChain and LangGraph"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "genai_playground"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = ">=0.1.0"
langchain-core = ">=0.1.0"
langgraph = ">=0.0.15"
python-dotenv = ">=1.0.0"
langchain-community = "^0.0.13"
pinecone-client = "^6.0.0"
chromadb = "^0.6.3"
pymupdf = "^1.25.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

# mypy configuration
[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
pythonpath = ["."] 